--- a/index.html
+++ b/index.html
@@ -31,3 +31,31 @@
       View All Courses
     </a>
   </section>
+  <!-- Courses Section -->
+<section id="courses" class="py-16 px-6 bg-[#121221]">
+  <h2 class="text-3xl font-bold text-center text-purple-400 mb-12">Popular Courses</h2>
+  <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+
+    <!-- Course Card 1 -->
+    <div class="bg-[#1a1a2e] p-6 rounded-lg shadow-md border border-cyan-700 hover:scale-105 transition">
+      <h3 class="text-xl font-semibold text-cyan-300 mb-2">Ethical Hacking Masterclass</h3>
+      <p class="text-gray-400 text-sm mb-4">From basics to black-hat techniques with live projects.</p>
+      <a href="#" class="inline-block mt-2 text-cyan-400 hover:underline text-sm">View Details</a>
+    </div>
+
+    <!-- Course Card 2 -->
+    <div class="bg-[#1a1a2e] p-6 rounded-lg shadow-md border border-cyan-700 hover:scale-105 transition">
+      <h3 class="text-xl font-semibold text-cyan-300 mb-2">Bug Bounty Deep Dive</h3>
+      <p class="text-gray-400 text-sm mb-4">Real vulnerabilities, bounty hunting, responsible disclosure.</p>
+      <a href="#" class="inline-block mt-2 text-cyan-400 hover:underline text-sm">View Details</a>
+    </div>
+
+    <!-- Course Card 3 -->
+    <div class="bg-[#1a1a2e] p-6 rounded-lg shadow-md border border-cyan-700 hover:scale-105 transition">
+      <h3 class="text-xl font-semibold text-cyan-300 mb-2">Cybersecurity for Beginners</h3>
+      <p class="text-gray-400 text-sm mb-4">Perfect for non-techies & students. Build your foundation.</p>
+      <a href="#" class="inline-block mt-2 text-cyan-400 hover:underline text-sm">View Details</a>
+    </div>
+
+  </div>
+</section>
