--- a/index.html
+++ b/index.html
@@ -59,3 +59,43 @@
 
   </div>
 </section>
+<!-- Why Choose Cryptonic Area Section -->
+<section id="about" class="py-16 px-6 bg-[#0f0f1b]">
+  <h2 class="text-3xl font-bold text-center text-yellow-400 mb-12">Why Choose Cryptonic Area?</h2>
+  <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto text-center">
+    
+    <!-- Card 1 -->
+    <div class="p-6 bg-[#1a1a2e] rounded-lg shadow-md border border-yellow-700">
+      <svg class="mx-auto mb-4 w-10 h-10 text-yellow-400" fill="none" stroke="currentColor" stroke-width="1.5"
+        viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round"
+          d="M12 6v6l4 2"></path>
+      </svg>
+      <h3 class="text-xl font-semibold mb-2 text-yellow-300">Live Hands-on Labs</h3>
+      <p class="text-gray-400 text-sm">Practice in real-world simulated environments with custom tools.</p>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="p-6 bg-[#1a1a2e] rounded-lg shadow-md border border-yellow-700">
+      <svg class="mx-auto mb-4 w-10 h-10 text-yellow-400" fill="none" stroke="currentColor" stroke-width="1.5"
+        viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round"
+          d="M12 14l9-5-9-5-9 5 9 5zm0 0v6"></path>
+      </svg>
+      <h3 class="text-xl font-semibold mb-2 text-yellow-300">Expert Hackers</h3>
+      <p class="text-gray-400 text-sm">Learn directly from certified professionals with real attack experience.</p>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="p-6 bg-[#1a1a2e] rounded-lg shadow-md border border-yellow-700">
+      <svg class="mx-auto mb-4 w-10 h-10 text-yellow-400" fill="none" stroke="currentColor" stroke-width="1.5"
+        viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round"
+          d="M9.75 17l-3-3m0 0l3-3m-3 3h10.5"></path>
+      </svg>
+      <h3 class="text-xl font-semibold mb-2 text-yellow-300">Career Launchpad</h3>
+      <p class="text-gray-400 text-sm">Internships, resume help, certification, and interview training.</p>
+    </div>
+
+  </div>
+</section>
