--- a/index.html
+++ b/index.html
@@ -99,3 +99,37 @@
 
   </div>
 </section>
+<!-- Load Lottie Animation Library -->
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+<!-- Contact Section -->
+<section id="contact" class="py-16 px-6 bg-[#121221] text-center">
+  <h2 class="text-3xl font-bold text-pink-400 mb-6">Get in Touch</h2>
+  <p class="text-gray-400 mb-4 text-lg">Have questions or want to start learning? We'd love to hear from you.</p>
+
+  <div class="max-w-xl mx-auto mt-8">
+    <form action="https://formsubmit.co/YOUR_EMAIL@example.com" method="POST" class="space-y-4">
+      <input type="text" name="name" placeholder="Your Name" required class="w-full px-4 py-3 bg-[#1a1a2e] border border-gray-700 rounded text-white">
+      <input type="email" name="email" placeholder="Your Email" required class="w-full px-4 py-3 bg-[#1a1a2e] border border-gray-700 rounded text-white">
+      <textarea name="message" rows="5" placeholder="Your Message" required class="w-full px-4 py-3 bg-[#1a1a2e] border border-gray-700 rounded text-white"></textarea>
+      <button type="submit" class="bg-pink-500 hover:bg-pink-600 px-6 py-3 rounded-full font-semibold text-white transition">
+        Send Message
+      </button>
+    </form>
+
+    <!-- Contact Links with Animated Icons -->
+    <div class="mt-10 flex flex-col items-center space-y-4 text-gray-300 text-sm">
+
+      <div class="flex items-center space-x-3">
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_jcikwtux.json" background="transparent" speed="1" style="width: 40px; height: 40px;" loop autoplay></lottie-player>
+        <span class="text-white">cryptonicarea@gmail.com</span>
+      </div>
+
+      <div class="flex items-center space-x-3">
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_T7DDFL.json" background="transparent" speed="1" style="width: 40px; height: 40px;" loop autoplay></lottie-player>
+        <a href="https://t.me/cryptonicarea" target="_blank" class="text-cyan-400 hover:underline">t.me/cryptonicarea</a>
+      </div>
+
+    </div>
+  </div>
+  </section>
