--- a/index.html
+++ b/index.html
@@ -133,3 +133,39 @@
     </div>
   </div>
   </section>
+<!-- Footer -->
+<footer class="bg-[#0f0f1b] text-gray-400 text-sm border-t border-gray-700 py-10 px-6">
+  <div class="max-w-6xl mx-auto grid md:grid-cols-3 gap-6 text-center md:text-left">
+
+    <!-- Logo + Tagline -->
+    <div>
+      <div class="text-xl font-bold text-cyan-400 mb-2">CRYPTONIC AREA</div>
+      <p>Your Gateway to Cybersecurity Mastery.</p>
+    </div>
+
+    <!-- Quick Links -->
+    <div>
+      <h3 class="text-white font-semibold mb-2">Quick Links</h3>
+      <ul class="space-y-1">
+        <li><a href="#courses" class="hover:text-cyan-400">Courses</a></li>
+        <li><a href="#about" class="hover:text-cyan-400">Why Us</a></li>
+        <li><a href="#contact" class="hover:text-cyan-400">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Social Links -->
+    <div>
+      <h3 class="text-white font-semibold mb-2">Connect</h3>
+      <ul class="space-y-1">
+        <li><a href="https://t.me/cryptonicarea" class="hover:text-cyan-400" target="_blank">Telegram</a></li>
+        <li><a href="mailto:contact@cryptonicarea.com" class="hover:text-cyan-400">Email Us</a></li>
+        <li><a href="https://github.com/cryptonicarea" class="hover:text-cyan-400" target="_blank">GitHub</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="text-center text-gray-500 mt-8 border-t border-gray-700 pt-6">
+    © 2025 Cryptonic Area. All rights reserved.
+  </div>
+</footer>
